<resources>
    <string name="app_name">WeatherForecastApplication</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">Hello</string>
    <string name="search_for_your_location">search for your location</string>
    <string name="location">Location</string>
    <string name="language">Language</string>
    <string name="temperature">Temperature</string>
    <string name="notification">Notification</string>
    <string name="map">Map</string>
    <string name="gps">Gps</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="windspeed">WindSpeed</string>
    <string name="meter">Meter</string>
    <string name="mile">Mile</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="setlocation">SetLocation</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="location_text">LOCATION</string>
    <string name="updated_at">Updated at</string>
    <string name="clear_sky">Clear Sky</string>
    <string name="temp">24°C</string>
    <string name="min_temp">Min Temp</string>
    <string name="max_min">Max min</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunrise_time">5:30am</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">humidity</string>
    <string name="sunset">Sunset</string>
    <string name="humidityTow">Humidity</string>
    <string name="kelvin">Kelvin</string>
    <string name="title_activity_fav_map">FavMap</string>
</resources>