<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SettingsFragment"
    android:background="@drawable/new_fet_background"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"

        >
        <TextView
            android:id="@+id/TextHello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/hello"
            android:textColor="@color/white"
            android:textSize="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

    </androidx.constraintlayout.widget.ConstraintLayout>

     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:overScrollMode="never"
         android:scrollbars="none"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/layoutHeader">
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/new_fet_background"

             >
             <LinearLayout
                 android:id="@+id/layoutLocation"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="22dp"
                 android:background="@drawable/settingis_background"
                 android:gravity="center"
                 android:orientation="vertical"
                 android:padding="15dp"
                 app:layout_constraintDimensionRatio="H,1:1"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/layoutLanguage"


                 >
                 <ImageView
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_margin="8dp"
                     android:contentDescription="@string/app_name"
                     android:padding="8dp"
                     android:src="@drawable/map"
                     />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/location"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"

                    />
                 <RadioGroup
                     android:id="@+id/radioLocation"

                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="8dp"
                     >

                     <RadioButton
                         android:id="@+id/gps"
                         android:layout_width="wrap_content"
                         android:layout_height="20dp"
                         android:text="@string/gps"
                         android:textColor="@color/white"
                         />



                     <RadioButton
                         android:id="@+id/map"
                         android:layout_width="wrap_content"
                         android:layout_height="20dp"
                         android:text="@string/map"
                         android:textColor="@color/white"

                         />

                     />
                 </RadioGroup>

             </LinearLayout>

             <LinearLayout
                 android:id="@+id/layoutLanguage"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/settingis_background"
                 android:gravity="center"
                 android:orientation="vertical"
                 android:padding="15dp"
                 app:layout_constraintDimensionRatio="H,1:1"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.923"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">

                 <ImageView
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_margin="8dp"
                     android:contentDescription="@string/app_name"
                     android:padding="8dp"
                     android:src="@drawable/languages" />

                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:text="@string/language"
                     android:textColor="@color/white"
                     android:textSize="20sp"
                     android:textStyle="bold"

                     />
                 <RadioGroup
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="8dp"
                     >

                     <RadioButton
                         android:id="@+id/english"
                         android:layout_width="wrap_content"
                         android:layout_height="20dp"
                         android:text="@string/english"
                         android:textColor="@color/white"

                         />

                     <RadioButton
                         android:id="@+id/arabic"
                         android:layout_width="wrap_content"
                         android:layout_height="20dp"
                         android:text="@string/arabic"

                         android:textColor="@color/white"
                         />

                     />
                 </RadioGroup>

             </LinearLayout>

             <LinearLayout
                 android:id="@+id/layoutTemperature"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="22dp"
                 android:background="@drawable/settingis_background"
                 android:gravity="center"
                 android:orientation="vertical"
                 android:padding="15dp"
                 app:layout_constraintDimensionRatio="H,1:1"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/layoutLocation"
                 app:layout_constraintEnd_toStartOf="@+id/layoutLanguage"


                 >
                 <ImageView
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_margin="8dp"
                     android:contentDescription="@string/app_name"
                     android:padding="8dp"
                     android:src="@drawable/temperature"
                     />
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:text="Temperature"
                     android:textColor="@color/white"
                     android:textSize="20sp"
                     android:textStyle="bold"

                     />
                 <RadioGroup
                     android:id="@+id/tempGroup"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="8dp"
                     >

                     <RadioButton
                         android:id="@+id/celsius"
                         android:layout_width="wrap_content"
                         android:layout_height="20dp"
                         android:text="@string/celsius"
                         android:textColor="@color/white"
                         />



                     <RadioButton
                         android:id="@+id/kelvin"
                         android:layout_width="wrap_content"
                         android:layout_height="20dp"
                         android:text="@string/kelvin"
                         android:textColor="@color/white"
                         />



                 </RadioGroup>

             </LinearLayout>

             <LinearLayout
                 android:id="@+id/layoutWindSpeed"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/settingis_background"
                 android:gravity="center"
                 android:orientation="vertical"
                 android:padding="15dp"
                 app:layout_constraintDimensionRatio="H,1:1"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.923"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/layoutLanguage">

                 <ImageView
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_margin="8dp"
                     android:contentDescription="@string/app_name"
                     android:padding="8dp"
                     android:src="@drawable/storm" />

                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:text="@string/windspeed"
                     android:textColor="@color/white"
                     android:textSize="20sp"
                     android:textStyle="bold"

                     />
                 <RadioGroup
                     android:id="@+id/windGroup"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="8dp"
                     >

                     <RadioButton
                         android:id="@+id/meter"
                         android:layout_width="wrap_content"
                         android:layout_height="20dp"
                         android:text="@string/meter"
                         android:textColor="@color/white"
                         />

                     <RadioButton
                         android:id="@+id/mile"
                         android:layout_width="wrap_content"
                         android:layout_height="20dp"
                         android:text="@string/mile"

                         android:textColor="@color/white"
                         />

                     />
                 </RadioGroup>

             </LinearLayout>

             <LinearLayout
                 android:id="@+id/layoutNotification"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="22dp"
                 android:background="@drawable/settingis_background"
                 android:gravity="center"
                 android:orientation="vertical"
                 android:padding="15dp"
                 app:layout_constraintDimensionRatio="H,1:1"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/layoutTemperature"
                 app:layout_constraintEnd_toStartOf="@+id/layoutLanguage"


                 >
                 <ImageView
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_margin="8dp"
                     android:contentDescription="@string/app_name"
                     android:padding="8dp"
                     android:src="@drawable/notification"
                     />
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:text="Notification"
                     android:textColor="@color/white"
                     android:textSize="20sp"
                     android:textStyle="bold"

                     />
                 <RadioGroup
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="8dp"
                     >

                     <RadioButton
                         android:id="@+id/enable"
                         android:layout_width="wrap_content"
                         android:layout_height="20dp"
                         android:text="@string/enable"
                         android:textColor="@color/white"
                         />



                     <RadioButton
                         android:id="@+id/disable"
                         android:layout_width="wrap_content"
                         android:layout_height="20dp"
                         android:text="@string/disable"
                         android:textColor="@color/white"
                         />



                 </RadioGroup>

             </LinearLayout>

             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="25dp"
                 android:background="@drawable/new_fet_background"
                 android:padding="20dp"
                 app:layout_constraintEnd_toEndOf="@id/layoutWindSpeed"
                 app:layout_constraintStart_toStartOf="@+id/layoutWindSpeed"
                 app:layout_constraintTop_toBottomOf="@+id/layoutWindSpeed"
                 >
               <TextView
                   android:id="@+id/text_fet"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:background="@drawable/white_background"
                   android:paddingTop="2dp"
                   android:paddingBottom="2dp"
                   android:text="@string/setlocation"
                   android:textColor="@color/colorAccent"
                   android:textSize="16sp"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintTop_toTopOf="parent"
                   />
                 <ImageButton
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:contentDescription="@string/app_name"
                     android:background="@drawable/location"
                     app:tint="@color/white"
                     app:layout_constraintBottom_toBottomOf="@+id/text_fet"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="@id/text_fet"
                     />

             </androidx.constraintlayout.widget.ConstraintLayout>


         </androidx.constraintlayout.widget.ConstraintLayout>

     </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>